--- a/circle.html
+++ b/circle.html
@@ -21,6 +21,8 @@
 
     <button id="clear">Clear</button>
     <button id="stop">Stop</button>
+    <button id="grow">Grow</button>
+    <button id="dvd">DVD</button>
 
     <script src="circle.js"></script>
   </body>
